fixes in reg_bio, add ability to save pictures from webcam to DB

--- a/account/templates/account/registrate_biometric.html
+++ b/account/templates/account/registrate_biometric.html
@@ -11,11 +11,13 @@
 
 <!-- INPUT BUTTON AND LINK TO VIEW FUNC THAT HANDLES FACE PICTURE -->
 
-<!-- <form action="/register_biometric/" method="post"> -->
+<h1>Welcome {{ new_user.first_name }}!</h1>
+
+<form action="." method="post">
     <!-- {{ user_form.as_p }} -->
-    <!-- {% csrf_token %} -->
-    <!-- <p><input type="submit" value="Save biometric"></p> -->
-<!-- </form> -->
+    {% csrf_token %}
+    <p><input type="submit" value="Save biometric"></p>
+</form>
     <!-- <h1>Welcome {{ new_user.first_name }}!</h1> -->
     <!-- <p>Your account has been successfully created. Now you can <a href="{% url "login" %}">log in</a>.</p> -->
 {% endblock %}
