--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -3,9 +3,11 @@
 {% block content %}
 <h1>Create an account</h1>
 <p>Please, sign up using the following form:</p>
-<form action="." method="post">
+<form action = "." method="post">
     {{ user_form.as_p }}
     {% csrf_token %}
     <p><input type="submit" value="Create my account"></p>
 </form>
+<p>{{ string_p }}<a href="/account/register_biometric/">{{ string_a }}</a></p>
+<!-- {{ string }} -->
 {% endblock %}
