--- a/account/templates/account/registrate_biometric.html
+++ b/account/templates/account/registrate_biometric.html
@@ -3,21 +3,23 @@
 {% block title %}Save your biometrics{% endblock %}
 
 {% block content %}
-<section class="video-boundary">
+<!-- <section class="video-boundary"> -->
+<div class="wrapper-form wrapper-register-bio">
     <div class="video-boundary__box">
         <img src="{% url 'video_stream:cam_capture' %}">
     </div>
-</section>
+    <h1>Welcome {{ new_user.first_name }}!</h1>
+
+    <form method="post" class="form form-register-bio">
+        {% csrf_token %}
+        <p><input type="submit" value="Save biometric"></p>
+    </form>
+</div>
+<!-- </section> -->
 
 <!-- INPUT BUTTON AND LINK TO VIEW FUNC THAT HANDLES FACE PICTURE -->
 
-<h1>Welcome {{ new_user.first_name }}!</h1>
 
-<form action="." method="post">
-    <!-- {{ user_form.as_p }} -->
-    {% csrf_token %}
-    <p><input type="submit" value="Save biometric"></p>
-</form>
     <!-- <h1>Welcome {{ new_user.first_name }}!</h1> -->
     <!-- <p>Your account has been successfully created. Now you can <a href="{% url "login" %}">log in</a>.</p> -->
 {% endblock %}
