--- a/account/templates/account/register_done.html
+++ b/account/templates/account/register_done.html
@@ -3,5 +3,7 @@
 {% block title %}Welcome{% endblock %}
 
 {% block content %}
-    <p>Your account has been successfully created. Now you can <a href="{% url "login" %}">log in</a>.</p>
+    <div class="wrapper-form wrapper-register">
+        <p>Your account has been successfully created. Now you can <a href="{% url 'account:login' %}">log in</a>.</p>
+    </div>
 {% endblock %}
