--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
-    <link href="{% static 'video_stream/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
 </head>
 <body>
     <div id="header">
-        <span class="logo">MySystem</span>
+        <!-- <span class="logo">MySystem</span> -->
     </div>
     <div class="content">
         {% block content %}
