MetaClass in WorkerBiometric

--- a/video_stream/templates/streaming/index.html
+++ b/video_stream/templates/streaming/index.html
@@ -9,7 +9,7 @@
     {% block title %}<title>Video Streaming</title>{% endblock %}
 
     {% block content %}
-    <h1 class="header">WebCam flow test</h1>
+    <h1 class="header">Streaming test</h1>
     <br>
     <!-- img taking src as url link, where another view func handling cam streaming  -->
     <section class="video-boundary">
