--- a/account/templates/account/edit.html
+++ b/account/templates/account/edit.html
@@ -9,6 +9,7 @@
             <form class = 'form form-edit' action="." method="post" enctype="multipart/form-data">
                 {{ user_form.as_p }}
                 {{ profile_form.as_p }}
+                {{ worker_form.as_p }}
                 {% csrf_token %}
                 <p><input type="submit" value="Save changes"></p>
             </form>
