--- a/account/templates/account/edit.html
+++ b/account/templates/account/edit.html
@@ -4,12 +4,12 @@
 
 {% block content %}
     <div class="wrapper-form wrapper-edit">
-        <div class="container-form container-edit">
-            <h1>Edit your account</h1>
-            <form class = 'form form-edit' action="." method="post" enctype="multipart/form-data">
-                {{ user_form.as_p }}
-                {{ profile_form.as_p }}
-                {{ worker_form.as_p }}
+        <div class="container form-register__container">
+            <h1 class = 'text-uppercase text-h1'>Edit your account</h1>
+            <form class = 'form' action="." method="post" enctype="multipart/form-data">
+                {{ user_form }}
+                {{ profile_form }}
+                {{ worker_form }}
                 {% csrf_token %}
                 <p><input type="submit" value="Save changes"></p>
             </form>
