--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,23 +1,45 @@
 {% extends "base.html" %}
 {% block title %}Log-in{% endblock %}
 {% block content %}
-    <!-- <h1>Log-in</h1> -->
-    <div class="wrapper-form wrapper-login">
-        <div class="container-form container-login">
-            <h1>Welcome</h1>
-            <form class="form form-login" action="." method="POST">
-                {{ form.as_p }}
-                {% csrf_token %}
-                <button type="submit" id="button-login">Login</button>
-            </form>
-            <div class="wrapper-link">
-                <p><a href="{% url "account:register" %}">Sign up</a></p>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Сохранение биометрии</h5>
+                <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+            <!--!!! STREAMING WINDOW !!!-->
+                <div class="container">
+                    <img class = 'container' src="{% url 'video_stream:cam_capture' %}">
+                </div>
+            <!--!!! STREAMING WINDOW !!!-->
+            </div>
+            <div class="modal-footer">
+                {% comment %} <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button> {% endcomment %}
+                <button type="button" class="btn btn-primary">Сохранить</button>
             </div>
         </div>
     </div>
-    <!-- <p>Please, use the following form to log-in:</p> -->
-    <!-- <form action="." method="post"> -->
-        <!-- {% csrf_token %} -->
-        <!-- <p class='text-addition'><input type="submit" value="Log-in"></p> -->
-    <!-- </form> -->
+</div>
+
+    <div class="wrapper-form">
+        <div class="container container-form form-register__container">
+            <h1 class = 'text-uppercase text-h1'>Welcome</h1>
+            <form class="form form-login" action="." method="POST">
+                {{ form }}
+                {% csrf_token %}
+                <button type="submit" id="button-login">Войти</button>
+            </form>
+            <div class="container wrapper-link mt-2">
+                <p><a href="{% url "account:register" %}">Зарегестрироваться</a></p>
+            </div>
+        </div>
+        <div class='container'>
+            <button type="button" class="btn btn-primary btn-abs-reg" data-toggle="modal" data-target="#exampleModal">
+                Вход через биометрию
+            </button>
+        </div>
+    </div>
 {% endblock %}
