--- a/workspace/templates/base-ws.html
+++ b/workspace/templates/base-ws.html
@@ -20,11 +20,20 @@
 {% comment %} {{request.user}} {% endcomment %}
     <header class="header-ws container-fluid">
         <nav class="navbar">
-            <div class="container">
-                <a href="#" class="navbar-brand text-uppercase navbar__text active">UA shield</a>
-                {% comment %} <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></i></button> {% endcomment %}
-                <div>
-                    <ul class="navbar-nav">
+            <div class="container row">
+                <a href="{% url "workspace:index" %}" class="navbar-brand text-uppercase navbar__text active col">System</a>
+                <div class = 'col'>
+                    <ul class = 'navbar-nav' style="justify-content: center;">
+                        <li class = 'nav-item'>
+                            <a href = "{% url "workspace:documents" %}" class='nav-link text-uppercase navbar__text'>Документы</a>
+                        </li>
+                        <li class = 'nav-item'>
+                            <a href = "{% url "workspace:access" %}" class='nav-link text-uppercase navbar__text'>Доступ</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class = 'col'>
+                    <ul class="navbar-nav" style="justify-content: flex-end;">
                         <li class="nav-item">
                             <a href="{% url "account:edit" %}" class="nav-link text-lowercase navbar__text">{{username}}</a>
                         </li>
@@ -43,8 +52,8 @@
         {% block content %}
         {% endblock %}
     </section>
-    <footer class = "footer-ws container-fluid">
+    {% comment %} <footer class = "footer-ws container-fluid">
         <span> Footer </span>
-    </footer>
+    </footer> {% endcomment %}
 </body>
 </html>
